--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
     integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
     crossorigin="anonymous"></script> -->
+    <style>
+      *{
+        margin:0;
+        padding: 0;
+      }
+    </style>
 </head>
 
 <body>
   <div id="app"></div>
   <!-- built files will be auto injected -->
 </body>
+
 
 </html>
